[tool.poetry]
name = "https-load-tester"
version = "0.1.0"
description = "A  program that can be used to simulate a load on a website or HTTP(S) based API"
authors = ["Checho3388 <ezequiel.grondona@gmail.com>"]
packages = [
    { include = 'src/*' }
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
requests-mock = "^1.11.0"
pytest-cov = "^4.1.0"

[tool.poetry.scripts]
ccload = 'src.entrypoints.cli:main'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
